# holonomy

./: CLAUDE.md  Cargo.toml  README.md  config.example.toml
.github/ISSUE_TEMPLATE/: config.yml  issue.yml
.github/workflows/: release.yml
docs/: release.md
skills/health-check/: SKILL.md
skills/holonomy-dev/: SKILL.md
skills/update-version/: SKILL.md
src/: ca.rs  config.rs  main.rs  proxy.rs
src/platform/: linux.rs  macos.rs  mod.rs  windows.rs
xtask/: Cargo.toml
xtask/src/: main.rs
