[package]
name = "holonomy"
version = "0.1.1"
edition = "2024"
license = "MIT"

[workspace]
members = ["xtask"]

[dependencies]
anyhow = "1.0"
axum = "0.8"
clap = { version = "4", features = ["derive"] }
hickory-proto = "0.25"
homedir = "0.3"
http = "1.3"
hyper = { version = "1.8", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["tokio"] }
rcgen = "0.13"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
rustls-pemfile = "2.2"
serde = { version = "1.0", features = ["derive"] }
time = "0.3"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "time", "signal"] }
tokio-rustls = "0.26"
toml = "0.9"
tower = { version = "0.5", features = ["util"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
